--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/next": "^9.26.2",
     "@trpc/react": "^9.26.2",
     "@trpc/server": "^9.26.2",
+    "markdown-to-jsx": "^7.1.7",
     "next": "12.2.3",
     "next-auth": "^4.10.2",
     "react": "18.2.0",
@@ -26,6 +27,8 @@
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.4",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
